2011-07-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dired-aux.el (dired-diff): Doc fixup (bug#8816).

	* dired.el (dired-mode): Fix up the doc string as suggested by
	Drew Adams (bug#8817).

	* progmodes/flymake.el (flymake-find-file-hook): Add an `autoload'
	cookie, since the manual says that it should be possible to add
	this function to `find-file-hook' (bug#8709).

2011-07-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/cfengine.el: Moved all cfengine3.el functionality
	here.  Noted Ted Zlatanov as the maintainer.
	(cfengine-common-settings, cfengine-common-syntax): New functions
	to set up common things between `cfengine-mode' and
	`cfengine3-mode'.
	(cfengine3-mode): New mode.
	(cfengine3-defuns cfengine3-defuns-regex
	(cfengine3-class-selector-regex cfengine3-category-regex)
	(cfengine3-vartypes cfengine3-font-lock-keywords)
	(cfengine3-beginning-of-defun, cfengine3-end-of-defun)
	(cfengine3-indent-line): Added from cfengine3.el.

2011-07-01  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-encoding-command-interactive): New defcustom.

	* net/tramp-sh.el (tramp-maybe-open-connection): Use it.

2011-07-01  Martin Rudalics  <rudalics@gmx.at>

	* window.el (same-window-buffer-names, same-window-regexps)
	(same-window-p, special-display-frame-alist)
	(special-display-popup-frame, special-display-function)
	(special-display-buffer-names, special-display-regexps)
	(special-display-p, pop-up-frame-alist, pop-up-frame-function)
	(pop-up-frames, display-buffer-reuse-frames, pop-up-windows)
	(split-window-preferred-function, split-height-threshold)
	(split-width-threshold, even-window-heights)
	(display-buffer-mark-dedicated, window-splittable-p)
	(split-window-sensibly, window-safely-shrinkable-p):
	Un-obsolete.
	(display-buffer): Don't spread args with function specifier
	because special-display-popup-frame won't like it.

2011-07-01  Paul Eggert  <eggert@cs.ucla.edu>

	Time-stamp simplifications and fixes.